tests/src/frontend/typechecking/invalid/embedded_no_try.sk
fun main(): void {
  try {
    void
  } catch {
  | _ -> void
  }
}
